# sdsort

./: .flake8  .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/specs/: 2026-07-17-skip-file-directive-design.md
sdsort/: __init__.py  ast_utils.py  block.py  cli.py  context.py  file_utils.py  format.py  formatting.py  graph.py  sort.py  sorting.py
sdsort/utils/: ast.py  file.py  pluralize.py  timer.py
test/: showast.py  smoke_test.py  test_sdsort.py
test/cases/: async_functions.in.py  async_functions.out.py  circular.in.py  circular.out.py  circular_class.in.py  circular_functions.in.py  circular_functions.out.py  class_attribute_name_collision.out.py  class_attribute_references_outer_function.in.py  class_attribute_references_outer_function.out.py  comments.in.py  comments.out.py  dangling_comment_between_defs.in.py  dangling_comment_between_defs.out.py  dataclass.in.py  dataclass.out.py  deferred_class_attribute_annotations.out.py  deferred_statement_annotation.in.py  flask_cli.in.py  flask_cli.out.py  flask_tag.out.py  function_decorator.in.py  function_decorator.out.py  jpe.out.py  mixed_class_and_functions.in.py  mixed_class_and_functions.out.py  multiline_string.in.py  multiline_string.out.py  multiple_barriers.in.py  multiple_barriers.out.py  nested_class.in.py  nested_class.out.py  nested_function.in.py  nested_function.out.py  overloads.in.py  overloads.out.py  overloads2.in.py  overloads2.out.py  parametrized_test.out.py  partial_function.in.py  (+15 more)
