[project]
name = "sdsort"
version = "0.2.1"
description = "Sorts functions and class methods according to the step-down rule"
authors = [
    { name = "Eiríkur Fannar Torfason", email = "eirikur.torfason@gmail.com" },
]
requires-python = ">= 3.13"
readme = "README.md"
dependencies = ["click>=8.3.1"]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
]

[project.scripts]
sdsort = "sdsort:main"

[tool.ruff]
exclude = ["test/cases"]
line-length = 115
target-version = "py314"

[tool.pyright]
include = ["sdsort", "test"]
exclude = ["test/cases"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
