[project]
name = "sdsort"
version = "0.2.1"
description = "Sorts functions and class methods according to the step-down rule"
authors = [{ name = "Eiríkur Fannar Torfason", email = "eirikur.torfason@gmail.com" }]
requires-python = ">= 3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["click>=8.3.1"]

[project.scripts]
sdsort = "sdsort:main"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
]

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["test/cases"]
line-length = 115
target-version = "py310"

[tool.pyright]
include = ["sdsort", "test"]
exclude = ["test/cases"]

[tool.uv.build-backend]
module-name = "sdsort"
module-root = ""
