[project]
name = "sdsort"
version = "0.4.5"
description = "Sorts functions and class methods according to the step-down rule"
authors = [{ name = "Eiríkur Fannar Torfason", email = "eirikur.torfason@gmail.com" }]
requires-python = ">= 3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["click>=8.3.1"]

[project.urls]
Homepage = "https://github.com/eirikurt/sdsort"
Issues = "https://github.com/eirikurt/sdsort/issues"
Repository = "https://github.com/eirikurt/sdsort.git"

[project.scripts]
sdsort = "sdsort:main"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
include = ["sdsort/**/*.py", "test/**/*.py"]
exclude = ["test/cases"]
line-length = 115
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = ["sdsort", "test"]
exclude = ["test/cases"]

[tool.uv]
required-version = ">=0.11.3,<0.12"

[tool.uv.build-backend]
module-name = "sdsort"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]
